@@ -2064,3 +2064,5 @@
 * pheno:   added friendly hitsounds for disguised coverts
 * pheno:   fixed class change with scoped weapon bug (prevents scoped sten)
 * pheno:   added headshot mode (g_headshot [0|1])
+* pheno:   added instagib damage (bitflag 2) to headshot mode. g_headshot is
+           now a bitmask cvar.
